--- a/style.css
+++ b/style.css
@@ -17,3 +17,58 @@ body{
     text-align: center;
 }
 
+.container{
+    margin-top: 100px;
+    display: block;
+    align-items: center;
+    text-align: center;
+}
+
+
+
+.swb{
+    margin-top: 20px;
+    display:inline-flex;
+    min-width: 20%;
+    margin-left: 5px;
+    margin-right: 5px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    
+}
+
+.btn{
+    padding: 10px;
+    font-size: x-large;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+#display{
+    margin-top: 20px;
+    font-size: 60px;
+    color: rgb(145, 156, 255);
+    background-color: rgb(3, 1, 27);
+    border: palegreen solid 2px;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 5% 5% 2% 5%;
+    text-align: center;
+}
+
+.container{
+    margin-top: 100px;
+    display: block;
+    align-items: center;
+    text-align: center;
+    color: skyblue;
+    background-color: royalblue;
+    border-radius: 10px;
+    padding: 10px;
+    max-width: 80%;
+    margin: auto;
+    margin-top: 5%;
+    ;
+}
